--- a/0x02-CSS_advanced/styles/17-style.css
+++ b/0x02-CSS_advanced/styles/17-style.css
@@ -393,7 +393,7 @@
     --section-body-padding: 0 0 3rem;
     --section-footer-padding: 3rem 0 0;
     --section-footer-align: center;
-    --fooer-padding: 5rem 0 1rem;
+    --footer-padding: 5rem 0 1rem;
 }
 
 body {
@@ -476,4 +476,8 @@ a:active {
     width: 960px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.footer {
+    padding: var(--footer-padding);
 }
